--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* h8300.h (TARGET_SWITCHES): Add documentation.
+
 Thu Mar 18 15:58:26 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* loop.c (strength_reduce): Do not perform pseudo replacements
