--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* mn10300.h (TARGET_SWITCHES): Add documentation.
 	* h8300.h (TARGET_SWITCHES): Add documentation.
 
 Thu Mar 18 15:58:26 1999  Nick Clifton  <nickc@cygnus.com>
