--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* pa.h (TARGET_SWITCHES): Add documentation.
+	(TARGET_OPTIONS): Likewise.
 	* mn10300.h (TARGET_SWITCHES): Add documentation.
 	* h8300.h (TARGET_SWITCHES): Add documentation.
 
