--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* fx80.h (TARGET_SWITCHES): Add documentation.
         * elxsi.h (TARGET_SWITCHES): Add documentation.
 	* clipper.h (TARGET_SWITCHES): Add documentation.
 	* 1750a.h (TARGET_SWITCHES): Add documentation.
