* i370.h (TARGET_SWITCHES): Add documentation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25850 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,6 @@
 Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* i370.h (TARGET_SWITCHES): Add documentation.
 	* fx80.h (TARGET_SWITCHES): Add documentation.
         * elxsi.h (TARGET_SWITCHES): Add documentation.
 	* clipper.h (TARGET_SWITCHES): Add documentation.
