--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+Fri Mar 19 02:45:12 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* Makefile.in (INTL_TARGETS): new macro
+	($(INTL_TARGETS)): depend on generated sources; drop dependencies
+	on cp/parse.c and objc/objc-parse.c
+	($(srcdir)/cp/parse.c): move to cp/Make-lang.in
+	* objc/Make-lang.in ($(INTL_TARGETS)): depend on objc/objc-parse.c 
+
 Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* i370.h (TARGET_SWITCHES): Add documentation.
