--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -8,6 +8,8 @@ Fri Mar 19 02:45:12 1999  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 Thu Mar 18 22:28:53 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* i860.h (TARGET_SWITCHES): Add documentation.
+	* i860/paragon.h (TARGET_SWITCHES): Add documentation.
 	* i370.h (TARGET_SWITCHES): Add documentation.
 	* fx80.h (TARGET_SWITCHES): Add documentation.
         * elxsi.h (TARGET_SWITCHES): Add documentation.
