--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar 20 11:39:58 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
+	* config/c4x/c4x.h (TARGET_SWITCHES): Add documentation.
+	* config/c4x/c4x.h (TARGET_OPTIONS): Add documentation.
+
 Fre Mar 19 23:26:29 1999  Martin von Löwis  <loewis@informatik.hu-berlin.de>
 
 	* expr.c (expand_expr): Handle ERROR_MARK much earlier.
