--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-21  Manfred Hollstein  <manfred@s-direktnet.de>
+
+	* Makefile.in (xgcc$(exeext)): Add intl.o to list of files to be
+	linked with.
+
 Sun Mar 21 01:15:03 PST 1999 Jeff Law  (law@cygnus.com)
 
 	* version.c: Bump for snapshot.
