*** empty log message ***
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25880 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-21  Manfred Hollstein  <manfred@s-direktnet.de>
+
+	* Makefile.in (g77$(exeext)): Depend on intl.o.  Link in intl.o.
+
 Wed Mar 17 11:39:44 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* news.texi: Editorial fix.
