More full description of changes for config/h8300/h8300.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25896 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -4,8 +4,9 @@ Mon Mar 22 10:44:33 1999  Vladimir Makarov  <vmakarov@tofu.to.cygnus.com>
  	(modhi3+1, andsi3+1, iorsi3+1, extzv+1, extzv+2): Change insn
  	default value of attribute "adjust_length" onto "no".
 
-	* config/h8300/h8300.c (h8300_adjust_insn_length):  Use 0 if the
-	shift is negative.
+	* config/h8300/h8300.c (h8300_adjust_insn_length): Adust
+        length only if the attribute "adjust_length" value is "yes".
+        Use 0 if the shift is negative.
 
 	* final.c (shorten_branches): Check insn length after its
  	adjusting.
