--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Mon Mar 22 21:08:59 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* rtl.h (shallow_copy_rtx): Declare.
+	* rtl.c (shallow_copy_rtx): New function.
+	* reload.c (find_reloads_toplev): Use shallow_copy_rtx instead of
+	copy_rtx.
+
 Mon Mar 22 10:44:33 1999  Vladimir Makarov  <vmakarov@tofu.to.cygnus.com>
 
 	* config/h8300/h8300.md (adjust_length): New attribute.
