--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 22 21:51:57 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* cse.c (cse_insn): Don't change the result register of a libcall.
+
 Mon Mar 22 21:08:59 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* rtl.h (shallow_copy_rtx): Declare.
