--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 22 22:24:30 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* reload1.c (reload_as_needed): Set reload_is_output_reload /
+	reload_has_output_reload for auto_inc expressions that could be
+	reloaded.  Call forget_old_reloads for REG_INC notes.
+
 Mon Mar 22 21:51:57 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* cse.c (cse_insn): Don't change the result register of a libcall.
