--- a/gcc/testsuite/gcc.c-torture/ChangeLog
+++ b/gcc/testsuite/gcc.c-torture/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 22 14:55:58 1999  Jim Wilson  <wilson@cygnus.com>
+
+	* bf-sign-2.c (main): Replace struct sizeof test with 4.
+
 Wed Mar 17 12:22:39 1999  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.c-torture/execute/ieee/980619-1.x: New.  Expected fail on x86.
