--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+Mon Mar 22 23:41:49 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* i386.h (PREFERRED_STACK_BOUNDARY): Define.
+
+Mon Mar 22 23:41:31 1999  John Wehle  (john@feith.com)
+
+	* i386.c (ix86_compute_frame_size): New function.
+	(ix86_prologue, ix86_epilogue): Use it.
+	* i386.h (INITIAL_ELIMINATION_OFFSET): Likewise.
+	* reload1.c: Provide default for PREFERRED_STACK_BOUNDARY.
+
 Mon Mar 22 18:06:59 1999  Jim Wilson  <wilson@cygnus.com>
 
 	* mips/mips.h (TARGET_SWITCHES, TARGET_OPTIONS): Add option doc
