--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+Mon Mar 22 23:52:01 1999  Mumit Khan  <khan@xraylith.wisc.edu>
+			  Donn Terry  <donn@interix.com>
+
+	* configure.in: Add i386-pc-interix support.
+	* configure: Regenerate.
+	* fixinc.interix: New file.
+	* config/interix.h: New file.
+	* config/x-interix: New file.
+	* config/xm-interix.h: New file.
+	* i386/interix.h: New file.
+	* i386/interix.c: New file.
+	* i386/t-interix: New file.
+
 Mon Mar 22 23:41:49 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* i386.h (PREFERRED_STACK_BOUNDARY): Define.
