--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+Tue Mar 23 00:39:14 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* i386/openbsd.h (TARGET_DEFAULT): Define.
+	* configure.in: Do not set TARGET_CPU_DEFAULT for x86 OpenBSD
+	configurations.
+	* configure: Rebuilt.
+
+Tue Mar 23 00:39:10 1999  John Wehle  (john@feith.com)
+
+	* i386/freebsd.h (TARGET_DEFAULT): Define instead
+	of TARGET_CPU_DEFAULT.
+	* i386/netbsd.h (TARGET_DEFAULT): Likewise.
+
 Mon Mar 22 23:52:01 1999  Mumit Khan  <khan@xraylith.wisc.edu>
 			  Donn Terry  <donn@interix.com>
 
