--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 Tue Mar 23 00:39:14 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* crtstuff.c: Use ANSI function definitions.  Fix minor whitespace
+	problems.
+
 	* i386/openbsd.h (TARGET_DEFAULT): Define.
 	* configure.in: Do not set TARGET_CPU_DEFAULT for x86 OpenBSD
 	configurations.
