--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+1999-01-23  Mike Stump  <mrs@wrs.com>
+
+	* arm/vxarm.h: Split out vxWorks support into separate headerfile
+	and vxify.
+	* arm/arm.c (cpu_defaults): Allow arm710 as default.
+	
+	* configure.in: Split out vxWorks support for Arm.
+	* configure: Rebuilt.
+
 Tue Mar 23 11:20:03 1999  Per Bothner  <bothner@cygnus.com>
 
 	* tree.c (first_rtl_op, has_cleanups):  Handle GOTO_SUBROUTINE_EXPR.
