--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 23 23:32:14 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* expr.c (expand_assignment): Do not try to optimize a aggregate
+	address which has VOIDmode.
+
 Tue Mar 23 22:51:48 1999  Mumit Khan  <khan@xraylith.wisc.edu>
 			  Donn Terry  <donn@interix.com>
 
