--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 Tue Mar 23 23:32:14 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* pa.md (rotlsi3): New expander.  Synthesize a variable rotate
+	left using a variable rotate right.  Provide anonymous pattern for
+	rotate left by a constant value.
+
 	* expr.c (expand_assignment): Do not try to optimize a aggregate
 	address which has VOIDmode.
 
