--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 24 01:35:01 1999  Geoff Keating  <geoffk@ozemail.com.au>
+
+	* fold-const.c (fold): Recognise a rotate by an unsigned amount.
+
 Tue Mar 23 23:32:14 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* pa.md (rotlsi3): New expander.  Synthesize a variable rotate
