--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-24  Jim Blandy  <jimb@zwingli.cygnus.com>
+
+	* libgcc2.c (__CTOR_LIST__, __DTOR_LIST__): Initialize on all
+	platforms.
+
 Wed Mar 24 01:35:01 1999  Geoff Keating  <geoffk@ozemail.com.au>
 
 	* fold-const.c (fold): Recognise a rotate by an unsigned amount.
